tests/type-errors/move-semantics/nodestruct_scope_end.cx
struct resource : @nodrop {
    int value;
};

int bad() {
    resource value;
    return 0;
}
